ver 0.5.4
- Added support for ASTC formats. (6x6, 8x8, 10x10, and 12x12)
- Fixed a bug that the DDS converter will accept unknown DXGI formats.
- Fixed a bug that the portable python can refer the installed python with some environment variables.
- Updated GUI to v0.5.1

ver 0.5.3
- Supported UE5.2
- Fixed a bug that python requires installed vcruntime.
- Fixed an error for some UE4.25 assets.
- Fixed a bug that check mode won't work with cubemaps for UE4.24 and 4.25
- Fixed an error when UE4.16 assets have no .uexp files
- Updated GUI to v0.4.1

ver 0.5.2
- Supported *.uptnl files.
- Introduced multiprocessing.
- Updated python from 3.9 to 3.10.
- Removed unnecessary files from embeddable python.
- Fixed an error when loading empty textures.
- Fixed an error when exporting BC6 textures.
- Fixed an error when exports have positive values for class ids.
- Fixed an error when exporting cubemaps as tga.

ver 0.5.1
- Updated GUI to v0.3.0
- Added tooltips to GUI
- Fixed a bug that max size will be uexp's max size.
- Fixed a bug that ubulk flags won't be updated correctly.
- Enabled "skip_non_texture" option and cubic filter as default.

ver 0.5.0
- Supported Texture2DArray, TextureCubeArray, and VolumeTexture
- Restored the batch file method for injection
- Added "save detected version" option for check mode
- Added "copy" mode
- Fixed a bug that num slices won't be saved correctly for some old UE versions.
- Refactored serialize functions
- Removed file list method (txt will be used for batch file method)

ver 0.4.5
- Supported ShadowMapTexture2D
- Added filter options (Possible to use bicubic interpolation for mip generation)
- Updated GUI to v0.2.2 (GUI can save output path for each mode)
- Improved error massages for dds files
- Fixed a bug that the tool can't load uncompressed mipmaps correctly
- Fixed an error when loading non-zero values for FObjectExport.TemplateIndex
- Added tests

ver 0.4.4
- Supported UE4.0 ~ 4.9.
- Added "Skip non-texture assets" option.